[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/Home.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/NewNote.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Pages.gd" type="Script" id=3]
[ext_resource path="res://scenes/Note.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/EditNote.tscn" type="PackedScene" id=5]
[ext_resource path="res://DeletePopup.tscn" type="PackedScene" id=6]
[ext_resource path="res://fonts/e-Ukraine/e-Ukraine-Medium.otf" type="DynamicFontData" id=7]
[ext_resource path="res://scenes/NotificationArea.gd" type="Script" id=8]

[sub_resource type="Theme" id=4]

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 12.0
content_margin_right = 12.0
content_margin_top = 12.0
content_margin_bottom = 12.0
bg_color = Color( 0.121569, 0.121569, 0.121569, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=6]
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 420, -80 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "show"
length = 0.05
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 11.0 ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.14902, 0.14902, 0.14902, 1 )

[node name="Pages" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Home" parent="Pages" instance=ExtResource( 1 )]

[node name="NewNote" parent="Pages" instance=ExtResource( 2 )]
visible = false

[node name="Note" parent="Pages" instance=ExtResource( 4 )]
visible = false

[node name="EditNote" parent="Pages" instance=ExtResource( 5 )]
visible = false

[node name="DeletePopup" parent="Pages" instance=ExtResource( 6 )]
visible = false

[node name="NotificationArea" type="Control" parent="."]
anchor_right = 1.0
margin_bottom = 71.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2
script = ExtResource( 8 )

[node name="Panel" type="PanelContainer" parent="NotificationArea"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -92.0
margin_top = -80.0
margin_right = 98.0
margin_bottom = -29.0006
mouse_filter = 2
custom_styles/panel = SubResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="NotificationArea/Panel"]
margin_left = 12.0
margin_top = 12.0
margin_right = 178.0
margin_bottom = 38.9994
size_flags_horizontal = 3
custom_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="NotificationArea/Panel/HBoxContainer"]
margin_top = 2.0
margin_right = 136.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 6 )
text = "Це сповіщення"
align = 1

[node name="CloseNoti" type="Button" parent="NotificationArea/Panel/HBoxContainer"]
margin_left = 146.0
margin_right = 166.0
margin_bottom = 26.0
mouse_default_cursor_shape = 2
text = "X"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="NotificationArea"]
anims/RESET = SubResource( 7 )
anims/show = SubResource( 8 )

[node name="Timer" type="Timer" parent="NotificationArea"]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="NotificationArea/Panel/HBoxContainer/CloseNoti" to="NotificationArea" method="_on_CloseNoti_pressed"]
[connection signal="timeout" from="NotificationArea/Timer" to="NotificationArea" method="_on_Timer_timeout"]
